--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "url": "https://github.com/danielcsrs/lean-nodejs-api-restful/issues"
   },
   "homepage": "https://github.com/danielcsrs/lean-nodejs-api-restful#readme",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "helmet": "^3.22.0"
+  },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
