:heavy_plus_sign: add babel and npm scripts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && node dist/server.js",
+    "start:dev": "nodemon --exec babel-node src/server.js",
+    "build": "npm run prepare && babel src --out-dir dist",
+    "lint": "eslint src --ext .js",
+    "lint:fix": "eslint src --fix --ext .js",
+    "prettier": "prettier --check 'src/**/*.js'",
+    "prettier:fix": "prettier --write 'src/**/*.js'",
+    "prepare": "npm run lint:fix && npm run prettier:fix"
   },
   "repository": {
     "type": "git",
@@ -30,11 +37,16 @@
     "helmet": "^3.22.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "nodemon": "^2.0.2",
     "prettier": "^2.0.4"
   }
 }
