:see_no_evil: fixed babel eslint prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   },
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "no-console": "off"
   }
 }
