--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
-    "mongodb": "^3.5.5"
+    "moment": "^2.24.0",
+    "mongodb": "^3.5.5",
+    "morgan": "^1.10.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
