--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "npm run build && node dist/server.js",
     "start:dev": "nodemon --exec babel-node src/server.js",
     "build": "babel src --out-dir dist",
+    "test:unit": "NODE_ENV=test mocha test/unit/**/*.spec.js",
     "lint": "eslint src --ext .js",
     "lint:fix": "eslint src --fix --ext .js",
     "prettier": "prettier --check 'src/**/*.js'",
@@ -46,12 +47,15 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "mocha": "^7.1.1",
     "nodemon": "^2.0.2",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "sinon": "^9.0.2"
   }
 }
