--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:dev": "nodemon --exec babel-node src/server.js",
     "build": "babel src --out-dir dist",
     "test:unit": "NODE_ENV=test mocha test/unit/**/*.spec.js",
+    "test:integration": "NODE_ENV=test mocha test/integration/**/*.spec.js",
     "lint": "eslint src --ext .js",
     "lint:fix": "eslint src --fix --ext .js",
     "prettier": "prettier --check 'src/**/*.js'",
@@ -56,6 +57,7 @@
     "mocha": "^7.1.1",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.4",
-    "sinon": "^9.0.2"
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2"
   }
 }
